# palasik-iot-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  config.yaml  contributors.md  import.md  index.md  installation.md  main.py  main_2.py  pyproject.toml  requirements.txt  research_idea.md  trust-engine.md
.github/workflows/: ci.yml
core/: device_registry.py  policy_engine.py  trust_engine.py
docs/: ARCHITECTURE.md  CONCEPTS.md  CONFIG.md  GETTING_STARTED.md  PLUGINS.md  POLICY_ENGINE.md  README.md  TRUST_ENGINE.md
docs/palasik/: architecture.md
docs/raw/: citation.md  experiments.md  overview.md  policy-engine.md
enforcement/: quarantine.sh
examples/: main_mqtt.py
examples/mqtt_zero_trust_gateway/: README.md  config.yaml  run.sh
experiments/: export_dataset.py  plot_trust.py
palasik/: __init__.py  main.py  version.py
palasik/adapters/http/: adapter.py
palasik/adapters/mqtt/: adapter.py
palasik/cli/: main.py
palasik/core/: agent.py  config.py  context.py  coonfig.py  decision.py  dependency.py  device_registry.py  engine.py  events.py  loader.py  logger.py  plugin.py  plugin_loader.py  policy_engine.py  registry.py  test_enforcement.py  trust_engine.py
palasik/enforcement/: dependency.py  enforcer.py  firewall.py  firewall.sh
palasik/plugins/logger/: plugin.py
palasik/policy/: allow_deny.py  base.py
palasik/trust/: base.py  simple.py
plugins/logger/: plugin.py
tests/adapters/: test_http_adapter.py
tests/core/: test_allow_deny.py  test_config.py  test_context.py
tests/policy/: test_allow_deny.py
